--- a/index.html
+++ b/index.html
@@ -58,7 +58,65 @@
             </p>
         </div>
 
+        <div class="card">
+            <img src="./images/pic01.jpg" alt="img" class="img">
+            <small class="subheading">Lorem, ipsum.</small>
+            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="card__excerpt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
+                <a href="" class="read-more">Read More</a>
+            </p>
+        </div>
 
+        <div class="card">
+            <img src="./images/pic02.jpg" alt="img" class="img">
+            <small class="subheading">Lorem, ipsum.</small>
+            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="card__excerpt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
+                <a href="" class="read-more">Read More</a>
+            </p>
+        </div>
+
+        <div class="card">
+            <img src="./images/pic03.jpg" alt="img" class="img">
+            <small class="subheading">Lorem, ipsum.</small>
+            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="card__excerpt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
+                <a href="" class="read-more">Read More</a>
+            </p>
+        </div>
+
+        <div class="card">
+            <img src="./images/pic01.jpg" alt="img" class="img">
+            <small class="subheading">Lorem, ipsum.</small>
+            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="card__excerpt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
+                <a href="" class="read-more">Read More</a>
+            </p>
+        </div>
+
+        <div class="card">
+            <img src="./images/pic02.jpg" alt="img" class="img">
+            <small class="subheading">Lorem, ipsum.</small>
+            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="card__excerpt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
+                <a href="" class="read-more">Read More</a>
+            </p>
+        </div>
+
+        <div class="card">
+            <img src="./images/pic03.jpg" alt="img" class="img">
+            <small class="subheading">Lorem, ipsum.</small>
+            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="card__excerpt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
+                <a href="" class="read-more">Read More</a>
+            </p>
+        </div>
     </div> 
 
 
