Change Images from JPG to WEBP

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <div class="card">
-            <img src="./images/pic01.jpg" alt="img" class="img">
+            <img src="./images/pic01.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic02.jpg" alt="img" class="img">
+            <img src="./images/pic02.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -49,7 +49,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic03.jpg" alt="img" class="img">
+            <img src="./images/pic03.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -59,7 +59,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic04.jpg" alt="img" class="img">
+            <img src="./images/pic04.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -69,7 +69,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic05.jpg" alt="img" class="img">
+            <img src="./images/pic05.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -79,7 +79,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic01.jpg" alt="img" class="img">
+            <img src="./images/pic01.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -89,7 +89,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic02.jpg" alt="img" class="img">
+            <img src="./images/pic02.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -99,7 +99,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic03.jpg" alt="img" class="img">
+            <img src="./images/pic03.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -109,7 +109,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic04.jpg" alt="img" class="img">
+            <img src="./images/pic04.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
@@ -119,7 +119,7 @@
         </div>
 
         <div class="card">
-            <img src="./images/pic05.jpg" alt="img" class="img">
+            <img src="./images/pic05.webp" alt="img" class="img">
             <small class="subheading">Lorem, ipsum.</small>
             <h3 class="card__heading">Lorem, ipsum dolor.</h3>
             <p class="card__excerpt">
