--- a/index.html
+++ b/index.html
@@ -30,101 +30,91 @@
     <div class="container">
         <div class="card">
             <img src="./images/pic01.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic02.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic03.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic04.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic05.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic01.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic02.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic03.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic04.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong><strong>Category: </strong> </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic05.webp" alt="img" class="img">
-            <small class="subheading">Lorem, ipsum.</small>
-            <h3 class="card__heading">Lorem, ipsum dolor.</h3>
+            <p class="subheading"><small><strong><strong>Category: </strong> </strong> <a href="">Category</a></small></p>
+            <h3 class="card__heading ">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...
-                <a href="" class="read-more">Read More</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
             </p>
         </div>
     </div> 
