--- a/index.html
+++ b/index.html
@@ -15,25 +15,28 @@
 
     <header>
         <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="" class="nav__link">Home</a></li>
-                <li class="nav__item active"><a href="" class="nav__link">Services</a></li>
-                <li class="nav__item"><a href="" class="nav__link">About</a></li>
-                <li class="nav__item "><a href="" class="nav__link">Contact</a></li>
-            </ul>
+            <!-- <div class="container"> -->
+                <ul class="nav__list">
+                    <li class="nav__item active"><a href="" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="" class="nav__link">Services</a></li>
+                    <li class="nav__item"><a href="" class="nav__link">About</a></li>
+                    <li class="nav__item "><a href="" class="nav__link">Contact</a></li>
+                </ul>
+            <!-- </div> -->
         </nav>
     </header>
 
 
 
 
-    <div class="container">
+    <div class="container content">
         <div class="card">
             <img src="./images/pic01.webp" alt="img" class="img">
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
@@ -42,7 +45,8 @@
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
@@ -51,7 +55,8 @@
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
@@ -60,7 +65,8 @@
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
@@ -69,7 +75,8 @@
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
@@ -78,7 +85,8 @@
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
@@ -87,7 +95,8 @@
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
@@ -96,28 +105,33 @@
             <p class="subheading"><small><strong>Category: </strong> <a href="">Category</a></small></p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic04.webp" alt="img" class="img">
-            <p class="subheading"><small><strong><strong>Category: </strong> </strong> <a href="">Category</a></small></p>
+            <p class="subheading"><small><strong><strong>Category: </strong> </strong> <a href="">Category</a></small>
+            </p>
             <h3 class="card__heading">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
 
         <div class="card">
             <img src="./images/pic05.webp" alt="img" class="img">
-            <p class="subheading"><small><strong><strong>Category: </strong> </strong> <a href="">Category</a></small></p>
+            <p class="subheading"><small><strong><strong>Category: </strong> </strong> <a href="">Category</a></small>
+            </p>
             <h3 class="card__heading ">Card Heading</h3>
             <p class="card__excerpt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href="" class="read-more">Read more</a>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorum...<a href=""
+                    class="read-more">[Read more]</a>
             </p>
         </div>
-    </div> 
+    </div>
 
 
 
